--- a/docs/MPM_errors_manuscript/MPM_errors_manuscript.Rmd
+++ b/docs/MPM_errors_manuscript/MPM_errors_manuscript.Rmd
@@ -44,7 +44,7 @@ MPMs assume that the population at time $t$ is a snapshot at a particular "censu
 This nomenclatural ambiguity plays a role in all three of the "accounting errors" that follow.
 
 ## Ensuring that the fertility transition spans a full timestep
-**Check Caswell's notation for stage-structured models and use that here** In a life table (e.g., Table 1), age specific survival and birth rates look functionally equivalent. But there is an important difference: survival (often denoted $p_x$ or $\sigma_x$, where $x$ is the age or stage) represents the fraction of individuals in class $x$ that survive for a full timestep, from time $t$ to time $t+1$. In contrast, the birth rate (typically denoted $b_x$ or $m_x$) is instantaneous: it is the number of of offspring produced at time $t$ by an individual that is alive at time $t$. It is tempting to draw a life-cycle diagram like the one in Fig 1a (and we commonly see that in the litature). While this works as a *conceptual* diagram, translaing it directly into an MPM by coverting each arrow in the graph into a matrix element is incorrect: each transition in the matrix must span a timestep, and $m_x$ does not accomplish that. To get the timestep in there, we need to multiply $m_x$ by somebody's survival---either the parent or the offspring. For a pre-breeding census model, the reproductive transition is $F_x = m_x p_0$: the parent, in class $x$, produces $m_x$ offspring immediately after the census, and then these offspring survive to the end of the timestep at rate $p_0$ (Fig 1c). For an annual timestep, the transition $F_x$ represents the number of one-year-olds next year produced by an individual in class $x$ this year. 
+**Check Caswell's notation for stage-structured models and use that here** In a life table (e.g., Table 1), age specific survival and birth rates look functionally equivalent. But there is an important difference: survival (often denoted $P_x$, $s_x$, or $\sigma_x$, where $x$ is the age or stage) represents the fraction of individuals in class $x$ that survive for a full timestep, from time $t$ to time $t+1$. In contrast, the birth rate (typically denoted $b_x$ or $m_x$) is instantaneous: it is the number of of offspring produced at time $t$ by an individual that is alive at time $t$. It is tempting to draw a life-cycle diagram like the one in Fig 1a (and we commonly see that in the litature). While this works as a *conceptual* diagram, translaing it directly into an MPM by coverting each arrow in the graph into a matrix element is incorrect: each transition in the matrix must span a timestep, and $m_x$ does not accomplish that. To get the timestep in there, we need to multiply $m_x$ by somebody's survival---either the parent or the offspring. For a pre-breeding census model, the reproductive transition is $F_x = m_x p_0$: the parent, in class $x$, produces $m_x$ offspring immediately after the census, and then these offspring survive to the end of the timestep at rate $p_0$ (Fig 1c). For an annual timestep, the transition $F_x$ represents the number of one-year-olds next year produced by an individual in class $x$ this year. 
 
 In a post-breeding census, the parent (which will have just reproduced if it is already an adult) must survive for a timestep, aging by a timestep and possibly maturing into a new class, and then reproduces with a birth rate appropriate to its class at the end of the timestep. If we use $x'$ to denote the parent's class at time $t+1$, then the transision is $F_x = p_x m_{x'}$. For an annual timestep, $F_x$ is the number of zero-year-olds (newborns) next year produced next year by an individual that was in class $x$ this year. Properly accounting for $x'$ is a separate challenge that we address in the next subsection.
 
