Introduced a hard return after each sentence to make git's line-level change tracking more fine grained.

--- a/docs/MPM_errors_manuscript/MPM_errors_manuscript.Rmd
+++ b/docs/MPM_errors_manuscript/MPM_errors_manuscript.Rmd
@@ -28,25 +28,56 @@ numbersections: true
 ---
 
 # Introduction 
-The use of matrix population models (MPMs) for the ecological study of plants and animals has expanded rapidly in recent years [@Salguero-Gomez2015; @Salguero-Gomez2016]. MPMs are a convenient way to synthesize demographic information about a population, and are useful in addressing ecological, evolutionary, and management questions [@Caswell2001; @Morris2002a]. Most early MPMs were developed by collaborations between biologists with expertise on the species at hand and modelers with deep understanding of the subtleties of modeling. MPMs now, having been long promoted as a straightforward translation of life-history information into quantitative analysis, are often being created by biologists who are primarily empirical ecologists or conservation biologists, and may have had little training in modeling beyond a graduate course in population ecology. One might then ask, do these MPMs reliably reproduce the life histories they are meant to represent? 
+The use of matrix population models (MPMs) for the ecological study of plants and animals has expanded rapidly in recent years [@Salguero-Gomez2015; @Salguero-Gomez2016].
+MPMs are a convenient way to synthesize demographic information about a population, and are useful in addressing ecological, evolutionary, and management questions [@Caswell2001; @Morris2002a].
+Most early MPMs were developed by collaborations between biologists with expertise on the species at hand and modelers with deep understanding of the subtleties of modeling.
+MPMs now, having been long promoted as a straightforward translation of life-history information into quantitative analysis, are often being created by biologists who are primarily empirical ecologists or conservation biologists, and may have had little training in modeling beyond a graduate course in population ecology.
+One might then ask, do these MPMs reliably reproduce the life histories they are meant to represent? 
 
-It is important to remember that MPMs are approximations, both because they still abstract away much biological detail and because demographic measurements are imprecise. There are a variety of subtleties in constructing such models, especially when breeding is spread across a substantial fraction of the year or when there is substantial heterogeneity among individuals within an age or stage class; much theoretical work has gone into making MPMs more complex to account for this, and we are starting to better understand the effects of these phenomena on simple models [e.g., @Fujiwara2017]. But even setting aside these issues, we might hope that, if we assume that a simple life history description (e.g., as embodied in an age- or stage-structured life table) is a useful description of the population, then the constructed MPM should accurately reproduce that description. If it does not, then we are introducing additional errors into the analysis above and beyond the inherent approximations of modeling.
+It is important to remember that MPMs are approximations, both because they still abstract away much biological detail and because demographic measurements are imprecise. 
+There are a variety of subtleties in constructing such models, especially when breeding is spread across a substantial fraction of the year or when there is substantial heterogeneity among individuals within an age or stage class; much theoretical work has gone into making MPMs more complex to account for this, and we are starting to better understand the effects of these phenomena on simple models [e.g., @Fujiwara2017]. 
+But even setting aside these issues, we might hope that, if we assume that a simple life history description (e.g., as embodied in an age- or stage-structured life table) is a useful description of the population, then the constructed MPM should accurately reproduce that description. 
+If it does not, then we are introducing additional errors into the analysis above and beyond the inherent approximations of modeling.
 
-One of us (BEK) has spent two decades teaching MPMs to applied masters students. This experience has revealed several aspects of MPM construction that are particularly challenging to novices, and thus might be similarly challenging to biologists who do not regularly create mathematical models of their system. Furthermore, the students, when sent to find a published model to analyze, have uncovered a suprising number of published MPMs that have failed to meet these challenges. At one level, the errors made by these novices are "simply" accounting issues, but our interpretation is that the difficulty that students have in overcoming them is rooted in the contrast between the often-loose way that terms are used to describe biological populations and the very precise meanings of terms in MPMs (together with some genuine linguistic ambiguity that plagues the field).
+One of us (BEK) has spent two decades teaching MPMs to applied masters students. 
+This experience has revealed several aspects of MPM construction that are particularly challenging to novices, and thus might be similarly challenging to biologists who do not regularly create mathematical models of their system. 
+Furthermore, the students, when sent to find a published model to analyze, have uncovered a suprising number of published MPMs that have failed to meet these challenges. 
+At one level, the errors made by these novices are "simply" accounting issues, but our interpretation is that the difficulty that students have in overcoming them is rooted in the contrast between the often-loose way that terms are used to describe biological populations and the very precise meanings of terms in MPMs (together with some genuine linguistic ambiguity that plagues the field).
 
-Our goal in this paper is to highlight these challenges (which are described in the next section), quantify their impacts on the outputs of MPMs, and document their prevalence in the peer-reviewed literature. We conclude with a discussion of why these MPM construction errors are so prevalent, and how we might improve future practice.
+Our goal in this paper is to highlight these challenges (which are described in the next section), quantify their impacts on the outputs of MPMs, and document their prevalence in the peer-reviewed literature. 
+We conclude with a discussion of why these MPM construction errors are so prevalent, and how we might improve future practice.
 
 # Challenges in MPM construction
-Matrix population models operate in discrete time, and as such are most naturally suited to species whose reproduction is concentrated in a short breeding season [so-called "birth-pulse" populations; @Caswell2001 *[did Caswell coin this phrase?]*]. Many animals and plants satisify this assumption, and we will focus on this case in our analysis. However, much of the theoretical development of MPMs was motivated by human demography, in which reproduction occurs throughout the year ("birth-flow" populations). This requires a variety of mathematical approximations to suitably transform continuous-time processes into a discrete-time representation, and gives a different view of the identity of individuals in a particular age or stage class. We will not treat the former here, but the latter is relevant. 
+Matrix population models operate in discrete time, and as such are most naturally suited to species whose reproduction is concentrated in a short breeding season [so-called "birth-pulse" populations; @Caswell2001 *[did Caswell coin this phrase?]*]. 
+Many animals and plants satisify this assumption, and we will focus on this case in our analysis. However, much of the theoretical development of MPMs was motivated by human demography, in which reproduction occurs throughout the year ("birth-flow" populations). 
+This requires a variety of mathematical approximations to suitably transform continuous-time processes into a discrete-time representation, and gives a different view of the identity of individuals in a particular age or stage class. 
+We will not treat the former here, but the latter is relevant. 
 
-MPMs assume that the population at time $t$ is a snapshot at a particular "census date." The discretization of age into classes means that in a birth-flow population, the first age class represents all individuals between zero and one timestep old at time $t$, and thus we would describe it as "Age 0--1." In contrast, in a birth-pulse population, all individuals in an age class are (more-or-less) exactly the same age. If the census were taken immediately after the breeding season^[Defined as the season in which individuals are born, not the season during which their parents mate.] (a "post-breeding census"), the first age class would comprise newborn individuals, all of age zero, the second class would comprise individuals of age exactly one, etc.^[In principle, the census could occur at any time relative to the breeding season, and @Caswell2001 provides general formulas to account for this; but in practice the two cases described here encompass nearly all, if not all, published birth-pulse models.] In contrast, if the census were taken immediately before the breeding season (a "pre-breeding census"), the youngest age class would be made up of individuals all with age exactly one. But we often see birth-pulse models in which the age classes are given as a range---this is incorrect, and leads to ambiguity (does the class "Age 0--1" refer to newborns or to one-year-olds?) that can confuse the practitioner on how best to construct the model. This nomenclature problem likely has two sources. First, many texts introduce birth-flow models first [e.g., the very first figure in @Caswell2001, illustrating the notion of discrete age classes, shows the classes as ages 0--1, 1--2, etc.]. Second, in colloquial use, age-associated terms often span an age range: for example, in ungulates the term "yearling" refers to any individual between the ages of one and two. When that same term is applied to a class in a birth-pulse MPM, nontrivial cognitive effort is required to mentally redefine it (so that "Yearling" means age exactly one). 
+MPMs assume that the population at time $t$ is a snapshot at a particular "census date." 
+The discretization of age into classes means that in a birth-flow population, the first age class represents all individuals between zero and one timestep old at time $t$, and thus we would describe it as "Age 0--1." 
+In contrast, in a birth-pulse population, all individuals in an age class are (more-or-less) exactly the same age. 
+If the census were taken immediately after the breeding season^[Defined as the season in which individuals are born, not the season during which their parents mate.] (a "post-breeding census"), the first age class would comprise newborn individuals, all of age zero, the second class would comprise individuals of age exactly one, etc.^[In principle, the census could occur at any time relative to the breeding season, and @Caswell2001 provides general formulas to account for this; but in practice the two cases described here encompass nearly all, if not all, published birth-pulse models.] 
+In contrast, if the census were taken immediately before the breeding season (a "pre-breeding census"), the youngest age class would be made up of individuals all with age exactly one. 
+But we often see birth-pulse models in which the age classes are given as a range---this is incorrect, and leads to ambiguity (does the class "Age 0--1" refer to newborns or to one-year-olds?) that can confuse the practitioner on how best to construct the model. 
+This nomenclature problem likely has two sources. First, many texts introduce birth-flow models first [e.g., the very first figure in @Caswell2001, illustrating the notion of discrete age classes, shows the classes as ages 0--1, 1--2, etc.]. Second, in colloquial use, age-associated terms often span an age range: for example, in ungulates the term "yearling" refers to any individual between the ages of one and two. 
+When that same term is applied to a class in a birth-pulse MPM, nontrivial cognitive effort is required to mentally redefine it (so that "Yearling" means age exactly one). 
 
 This nomenclatural ambiguity plays a role in all three of the "accounting errors" that follow.
 
 ## Ensuring that the fertility transition spans a full timestep
-**Check Caswell's notation for stage-structured models and use that here** In a life table (e.g., Table 1), age specific survival and birth rates look functionally equivalent. But there is an important difference: survival (often denoted $P_x$, $s_x$, or $\sigma_x$, where $x$ is the age or stage) represents the fraction of individuals in class $x$ that survive for a full timestep, from time $t$ to time $t+1$. In contrast, the birth rate (typically denoted $b_x$ or $m_x$) is instantaneous: it is the number of of offspring produced at time $t$ by an individual that is alive at time $t$. It is tempting to draw a life-cycle diagram like the one in Fig 1a (and we commonly see that in the litature). While this works as a *conceptual* diagram, translaing it directly into an MPM by coverting each arrow in the graph into a matrix element is incorrect: each transition in the matrix must span a timestep, and $m_x$ does not accomplish that. To get the timestep in there, we need to multiply $m_x$ by somebody's survival---either the parent or the offspring. For a pre-breeding census model, the reproductive transition is $F_x = m_x p_0$: the parent, in class $x$, produces $m_x$ offspring immediately after the census, and then these offspring survive to the end of the timestep at rate $p_0$ (Fig 1c). For an annual timestep, the transition $F_x$ represents the number of one-year-olds next year produced by an individual in class $x$ this year. 
+**Check Caswell's notation for stage-structured models and use that here** 
+In a life table (e.g., Table 1), age specific survival and birth rates look functionally equivalent. 
+But there is an important difference: survival (often denoted $P_x$, $s_x$, or $\sigma_x$, where $x$ is the age or stage) represents the fraction of individuals in class $x$ that survive for a full timestep, from time $t$ to time $t+1$. 
+In contrast, the birth rate (typically denoted $b_x$ or $m_x$) is instantaneous: it is the number of of offspring produced at time $t$ by an individual that is alive at time $t$. 
+It is tempting to draw a life-cycle diagram like the one in Fig 1a (and we commonly see that in the litature). 
+While this works as a *conceptual* diagram, translaing it directly into an MPM by coverting each arrow in the graph into a matrix element is incorrect: each transition in the matrix must span a timestep, and $m_x$ does not accomplish that. 
+To get the timestep in there, we need to multiply $m_x$ by somebody's survival---either the parent or the offspring. 
+For a pre-breeding census model, the reproductive transition is $F_x = m_x p_0$: the parent, in class $x$, produces $m_x$ offspring immediately after the census, and then these offspring survive to the end of the timestep at rate $p_0$ (Fig 1c). 
+For an annual timestep, the transition $F_x$ represents the number of one-year-olds next year produced by an individual in class $x$ this year. 
 
-In a post-breeding census, the parent (which will have just reproduced if it is already an adult) must survive for a timestep, aging by a timestep and possibly maturing into a new class, and then reproduces with a birth rate appropriate to its class at the end of the timestep. If we use $x'$ to denote the parent's class at time $t+1$, then the transision is $F_x = p_x m_{x'}$. For an annual timestep, $F_x$ is the number of zero-year-olds (newborns) next year produced next year by an individual that was in class $x$ this year. Properly accounting for $x'$ is a separate challenge that we address in the next subsection.
+In a post-breeding census, the parent (which will have just reproduced if it is already an adult) must survive for a timestep, aging by a timestep and possibly maturing into a new class, and then reproduces with a birth rate appropriate to its class at the end of the timestep. 
+If we use $x'$ to denote the parent's class at time $t+1$, then the transision is $F_x = p_x m_{x'}$. For an annual timestep, $F_x$ is the number of zero-year-olds (newborns) next year produced next year by an individual that was in class $x$ this year. 
+Properly accounting for $x'$ is a separate challenge that we address in the next subsection.
 
 **Make an example life table with symbols and values**
 
