--- a/docs/MPM_errors_manuscript/MPM_errors_manuscript.Rmd
+++ b/docs/MPM_errors_manuscript/MPM_errors_manuscript.Rmd
@@ -1,5 +1,4 @@
 ---
-els-options: "authordate"
 title: Persistent problems in the construction of matrix population models
 author:
   - name: Bruce E. Kendall
@@ -23,9 +22,17 @@ abstract: |
 keywords: COMADRE animal matrix database, Lefkovitch matrix, Leslie matrix, Matrix population models
 bibliography: Bibliography.bib
 csl: ecological-modelling.csl
-output: rticles::elsevier_article
+output: 
+  bookdown::pdf_book:
+    base_format: rticles::elsevier_article
+    keep_tex: true
 numbersections: true
+linenumbers: true
+tables: true
+journal: "Ecological Modelling"
 ---
+
+*NOTE: The R code used to generate results, tables, and figures is shown in this draft, for transparency of review. It will be hidden in the final version.*
 
 # Introduction 
 The use of matrix population models (MPMs) for the ecological study of plants and animals has expanded rapidly in recent years [@Salguero-Gomez2015; @Salguero-Gomez2016].
@@ -82,11 +89,39 @@ This will make our exposition clearer, but it is important to note that our life
 
 ## Ensuring that the fertility transition spans a full timestep
 **Check Caswell's notation for stage-structured models and use that here** 
-In a life table (e.g., Table 1), age specific survival and birth rates look functionally equivalent. 
+In a life table (e.g., Table \ref{tab:lifetable}, age specific survival and birth rates look functionally equivalent. 
 But there is an important difference: survival (often denoted $P_x$ (most common, but has a different meaning in stage-structured models), $s_x$, or $\sigma_x$, where $x$ is the age or stage; we will use $\sigma_x$) represents the fraction of individuals in class $x$ that survive for a full timestep, from time $t$ to time $t+1$. 
 In contrast, the birth rate (typically denoted $b_x$ or $m_x$; we use the former) is instantaneous: it is the number of of offspring produced at time $t$ by an individual that is alive at time $t$. 
 It is tempting to draw a life-cycle diagram like the one in Fig 1a (and we commonly see that in the litature). 
 While this works as a *conceptual* diagram, translaing it directly into an MPM by coverting each arrow in the graph into a matrix element is incorrect: each transition in the matrix must span a timestep, and $m_x$ does not accomplish that. 
+```{r lifetable, results='markup'}
+### Make and display a sample life table
+sample_life_table <- data.frame(
+  Age = c(0:4, "$\\vdots$"),
+  Survival = c(0.2, 0.4, 0.4, 0.9, 0.9, "$\\vdots$"),
+  Birth = c(0, 0, 0, 3, 3, "$\\vdots$"),
+  Stage = c("Newborn", "Juvenile", "Juvenile", "Adult", "Adult",
+            "$\\vdots$")
+)
+
+names(sample_life_table) <- c("Age in years ($x$)", 
+                              "Annual survival ($\\sigma_x$)",
+                              "Birth rate ($b_x$)",
+                              "Stage")
+knitr::kable(sample_life_table, escape = FALSE,
+             booktabs = TRUE,  align = c("c", "c", "c", "c"),
+             caption = "A sample life table for a species that
+             reaches sexual maturity at age 3 (adult stage). 
+             Adults continue to survive and
+             reproduce indefinitely with the same survival 
+             and birth rates.
+             Note that, because we are using the 
+             stage-structured convention for assigning age 
+             class names (see text), the table may look slightly
+             different from those in many textbooks.")
+```
+
+
 To get the timestep in there, we need to multiply $m_x$ by somebody's survival---either the parent or the offspring. 
 For a pre-breeding census model, the reproductive transition is $F_x = m_x p_0$: the parent, in class $x$, produces $m_x$ offspring immediately after the census, and then these offspring survive to the end of the timestep at rate $p_0$ (Fig 1c). 
 For an annual timestep, the transition $F_x$ represents the number of one-year-olds next year produced by an individual in class $x$ this year. 
@@ -94,8 +129,6 @@ For an annual timestep, the transition $F_x$ represents the number of one-year-o
 In a post-breeding census, the parent (which will have just reproduced if it is already an adult) must survive for a timestep, aging by a timestep and possibly maturing into a new class, and then reproduces with a birth rate appropriate to its class at the end of the timestep. 
 If we use $x'$ to denote the parent's class at time $t+1$, then the transision is $F_x = p_x m_{x'}$. For an annual timestep, $F_x$ is the number of zero-year-olds (newborns) next year produced next year by an individual that was in class $x$ this year. 
 Properly accounting for $x'$ is a separate challenge that we address in the next subsection.
-
-**Make an example life table with symbols and values**
 
 **Make 4 life cycle graphs to go with the life table, using `diagram`: Fx = mx (incorrect); post=breeding with no reproduction from subadults (incorrect); correct pre-breeding and post-breeding**
 
