--- a/docs/MPM_errors_manuscript/MPM_errors_manuscript.Rmd
+++ b/docs/MPM_errors_manuscript/MPM_errors_manuscript.Rmd
@@ -92,9 +92,9 @@ This will make our exposition clearer, but it is important to note that our life
 In a life table (e.g., Table \ref{tab:lifetable}, age specific survival and birth rates look functionally equivalent. 
 But there is an important difference: survival (often denoted $P_x$ (most common, but has a different meaning in stage-structured models), $s_x$, or $\sigma_x$, where $x$ is the age or stage; we will use $\sigma_x$) represents the fraction of individuals in class $x$ that survive for a full timestep, from time $t$ to time $t+1$. 
 In contrast, the birth rate (typically denoted $b_x$ or $m_x$; we use the former) is instantaneous: it is the number of of offspring produced at time $t$ by an individual that is alive at time $t$. 
-It is tempting to draw a life-cycle diagram like the one in Fig 1a (and we commonly see that in the litature). 
-While this works as a *conceptual* diagram, translaing it directly into an MPM by coverting each arrow in the graph into a matrix element is incorrect: each transition in the matrix must span a timestep, and $m_x$ does not accomplish that. 
-```{r lifetable, results='markup'}
+It is tempting to draw a life-cycle diagram like the one in Fig. \@ref(fig:lifecycles)a (and we commonly see that in the literature). 
+While this works as a *conceptual* diagram, translating it directly into an MPM by coverting each arrow in the graph into a matrix element is incorrect: each transition in the matrix must span a timestep, and $m_x$ does not accomplish that. 
+```{r lifetable, results='markup', echo=FALSE}
 ### Make and display a sample life table
 sample_life_table <- data.frame(
   Age = c(0:4, "$\\vdots$"),
@@ -121,17 +121,94 @@ knitr::kable(sample_life_table, escape = FALSE,
              different from those in many textbooks.")
 ```
 
+```{r lifecycles, echo=FALSE, warning=FALSE, message=FALSE, fig.cap='Four life-cycle diagrams that might (or might not) represent the life table in Table 1. (a) A "naive" representation that associates each arrow with a vital rate. This fails to account for the fact that the reproductive transitions must span a timestep and therefor include a survival term. (b) A pre-breeding census representation, in which the youngest censused class is Age 1 and the adult birth rate is multiplied by newborn survival. (c) A post-breeding census representation, in which the adult burth rate is correctly multiplied by adult survival, but which fails to account for the fact that Age 2 individuals will have reproduced (as adults) just prior to the next census. (d) A correct post-breeding census representation.'}
+library(diagram)
+class_names <- c("Age 0", "Age 1", "Age 2", "Adult")
+op <- par(mfrow = c(2,2), mar = c(0.1, 0.1, 1.6, 0.1))
+
+# Common control paramters for the diagrams
+# Set them once here so that they can be easily updated
+# Unfortunately plotmat() is not scale-independent!
+pos = 4
+self.shiftx = 0.15
+self.shifty = -0.08
+self.lwd = 2
+self.lwd = 2
+self.cex = 1
+self.arrpos = NULL
+shadow.size = 0.0
+relsize = 0.89
+mx = -0.05
+arr.type = "triangle"
+arr.length = 0.2
+
+# "Naive" life cycle diagram
+mat1 <- as.data.frame(
+  matrix(nrow = 4, ncol = 4, byrow = TRUE, data = 0)
+)
+mat1[[2,1]] <- "sigma[0]"
+mat1[[3,2]] <- "sigma[1]"
+mat1[[4,3]] <- "sigma[2]"
+mat1[[4,4]] <- "sigma[3]"
+mat1[[1,4]] <- "b[3]"
+curves <- matrix(0, 4, 4)
+curves[2,1] <- curves[3,2] <- curves[4,3] <- 1
+curves[1,4] <- 0.5
+plotmat(mat1, name = class_names, pos = pos, curve = curves, 
+        self.shiftx = self.shiftx, self.shifty = self.shifty, 
+        self.lwd = self.lwd, self.cex = self.cex, 
+        self.arrpos = self.arrpos, shadow.size = shadow.size, 
+        relsize = relsize, mx = mx, arr.type = arr.type,  
+        arr.length = arr.length,
+        main = "\na) Naive representation (incorrect)")
+
+# Pre-breeding census 
+mat2 <- mat1[-1,-1]
+mat2[[1,3]] <- "b[3] * sigma[0]"
+curves2 <- curves[-1,-1]
+curves2[1,3] <- 0.5
+
+plotmat(mat2, name = class_names[-1], pos = 3, curve = curves2, 
+        self.shiftx = self.shiftx, self.shifty = self.shifty, 
+        self.lwd = self.lwd, self.cex = self.cex, 
+        self.arrpos = self.arrpos, shadow.size = shadow.size, 
+        relsize = relsize, mx = mx, arr.type = arr.type,  
+        arr.length = arr.length,
+        main = "\nb) Pre-breeding census representation (correct)")
+
+# Incorrect post-breeding census
+mat3 <- mat1
+mat3[[1,4]] <- "sigma[3] * b[3]"
+plotmat(mat3, name = class_names, pos = pos, curve = curves, 
+        self.shiftx = self.shiftx, self.shifty = self.shifty, 
+        self.lwd = self.lwd, self.cex = self.cex, 
+        self.arrpos = self.arrpos, shadow.size = shadow.size, 
+        relsize = relsize, mx = mx, arr.type = arr.type,  
+        arr.length = arr.length,
+        main = "c) Post-breeding census representation \n(incorrect)")
+
+# Correct post-breeding census
+mat4 <- mat3
+mat4[[1,3]] <- "sigma[2] * b[3]"
+curves[1,3] <- curves[1,4]
+plotmat(mat4, name = class_names, pos = pos, curve = curves, 
+        self.shiftx = self.shiftx, self.shifty = self.shifty, 
+        self.lwd = self.lwd, self.cex = self.cex, 
+        self.arrpos = self.arrpos, shadow.size = shadow.size, 
+        relsize = relsize, mx = mx, arr.type = arr.type,  
+        arr.length = arr.length,
+        main = "d) Post-breeding census representation \n(correct)")
+
+par(op)
+```
 
 To get the timestep in there, we need to multiply $m_x$ by somebody's survival---either the parent or the offspring. 
-For a pre-breeding census model, the reproductive transition is $F_x = m_x p_0$: the parent, in class $x$, produces $m_x$ offspring immediately after the census, and then these offspring survive to the end of the timestep at rate $p_0$ (Fig 1c). 
+For a pre-breeding census model, the reproductive transition is $F_x = m_x p_0$: the parent, in class $x$, produces $m_x$ offspring immediately after the census, and then these offspring survive to the end of the timestep at rate $p_0$ (Fig. \@ref(fig:lifecycles)b). 
 For an annual timestep, the transition $F_x$ represents the number of one-year-olds next year produced by an individual in class $x$ this year. 
 
 In a post-breeding census, the parent (which will have just reproduced if it is already an adult) must survive for a timestep, aging by a timestep and possibly maturing into a new class, and then reproduces with a birth rate appropriate to its class at the end of the timestep. 
-If we use $x'$ to denote the parent's class at time $t+1$, then the transision is $F_x = p_x m_{x'}$. For an annual timestep, $F_x$ is the number of zero-year-olds (newborns) next year produced next year by an individual that was in class $x$ this year. 
+If we use $x'$ to denote the parent's class at time $t+1$, then the transision is $F_x = p_x m_{x'}$ (Fig. \@ref(fig:lifecycles)d). For an annual timestep, $F_x$ is the number of zero-year-olds (newborns) next year produced next year by an individual that was in class $x$ this year. 
 Properly accounting for $x'$ is a separate challenge that we address in the next subsection.
-
-**Make 4 life cycle graphs to go with the life table, using `diagram`: Fx = mx (incorrect); post=breeding with no reproduction from subadults (incorrect); correct pre-breeding and post-breeding**
-
 
 
 ## Matching the age at first reproduction to the species' life history
