--- a/docs/MPM_errors_manuscript/MPM_errors_manuscript.Rmd
+++ b/docs/MPM_errors_manuscript/MPM_errors_manuscript.Rmd
@@ -27,6 +27,7 @@ output:
     base_format: rticles::elsevier_article
     keep_tex: true
 numbersections: true
+layout: "12pt, 1p"
 linenumbers: true
 tables: true
 journal: "Ecological Modelling"
