--- a/docs/MPM_errors_manuscript/Bibliography.bib
+++ b/docs/MPM_errors_manuscript/Bibliography.bib
@@ -1,53 +1,27 @@
-@Book{Caswell2001,
-author = {Caswell, H. }, 
-title = {Matrix population models: Construction, analysis, and interpretation}, 
-volume = {}, 
-pages = {}, 
-editor = {}, 
-edition = {2nd}, 
-publisher = {Sinauer Associates}, 
-address = {Sunderland, MA}, 
-year = {2001}, 
+@Article{Morris2011,
+author = {Morris, J. A. and Shertzer, K. W. and Rice, J. A. }, 
+title = {{A stage-based matrix population model of invasive lionfish with implications for control}}, 
+journal = {Biol Invasions}, 
+volume = {13}, 
+issue = {1}, 
+pages = {7-12}, 
+year = {2011}, 
 abstract = {}, 
-keywords = {}}
-
-@Book{Morris2002a,
-author = {Morris, W. F. and Doak, D. F. }, 
-title = {Quantitative conservation biology: Theory and practice of population viability analysis}, 
-volume = {}, 
-pages = {}, 
-editor = {}, 
-edition = {}, 
-publisher = {Sinauer Associates}, 
-address = {Sunderland, MA}, 
-year = {2002}, 
-abstract = {}, 
-keywords = {}}
-
-@Article{Salguero-Gomez2015,
-author = {Salguero-G{\'o}mez, R. and Jones, O. R. and Archer, C. R. and Buckley, Y. M. and Che-Castaldo, J. and Caswell, H. and Hodgson, D. and Scheuerlein, A. and Conde, D. A. and Brinks, E. and de Buhr, H. and Farack, C. and Gottschalk, F. and Hartmann, A. and Henning, A. and Hoppe, G. and R{\"o}mer, G. and Runge, J. and Ruoff, T. and Wille, J. and Zeh, S. and Davison, R. and Vieregg, D. and Baudisch, A. and Altwegg, R. and Colchero, F. and Dong, M. and de Kroon, H. and Lebreton, J.-D. and Metcalf, C. J. E. and Neel, M. M. and Parker, I. M. and Takada, T. and Valverde, T. and V{\'e}lez-Espino, L. A. and Wardle, G. M. and Franco, M. and Vaupel, J. W. }, 
-title = {{The {COMPADRE} Plant Matrix Database: an open online repository for plant demography}}, 
-journal = {J. Ecol.}, 
-volume = {103}, 
-issue = {}, 
-pages = {202-218}, 
-year = {2015}, 
-abstract = {}, 
-doi = {10.1111/1365-2745.12334}, 
+doi = {10.1007/s10530-010-9786-8}, 
 location = {}, 
 keywords = {}}
 
 
-@Article{Salguero-Gomez2016,
-author = {Salguero-G{\'o}mez, R. and Jones, O. R. and Archer, C. R. and Bein, C. and de Buhr, H. and Farack, C. and Gottschalk, F. and Hartmann, A. and Henning, A. and Hoppe, G. and R{\"o}mer, G. and Ruoff, T. and Sommer, V. and Wille, J. and Voigt, J. and Zeh, S. and Vieregg, D. and Buckley, Y. M. and Che-Castaldo, J. and Hodgson, D. and Scheuerlein, A. and Caswell, H. and Vaupel, J. W. }, 
-title = {{{COMADRE}: a global data base of animal demography.}}, 
-journal = {J. Anim. Ecol.}, 
-volume = {85}, 
-issue = {2}, 
-pages = {371-384}, 
-year = {2016}, 
-abstract = {The open-data scientific philosophy is being widely adopted and proving to promote considerable progress in ecology and evolution. Open-data global data bases now exist on animal migration, species distribution, conservation status, etc. However, a gap exists for data on population dynamics spanning the rich diversity of the animal kingdom world-wide. This information is fundamental to our understanding of the conditions that have shaped variation in animal life histories and their relationships with the environment, as well as the determinants of invasion and extinction. Matrix population models (MPMs) are among the most widely used demographic tools by animal ecologists. MPMs project population dynamics based on the reproduction, survival and development of individuals in a population over their life cycle. The outputs from MPMs have direct biological interpretations, facilitating comparisons among animal species as different as Caenorhabditis elegans, Loxodonta africana and Homo sapiens. Thousands of animal demographic records exist in the form of MPMs, but they are dispersed throughout the literature, rendering comparative analyses difficult. Here, we introduce the COMADRE Animal Matrix Database, an open-data online repository, which in its version 1.0.0 contains data on 345 species world-wide, from 402 studies with a total of 1625 population projection matrices. COMADRE also contains ancillary information (e.g. ecoregion, taxonomy, biogeography, etc.) that facilitates interpretation of the numerous demographic metrics that can be derived from its MPMs. We provide R code to some of these examples. SYNTHESIS: We introduce the COMADRE Animal Matrix Database, a resource for animal demography. Its open-data nature, together with its ancillary information, will facilitate comparative analysis, as will the growing availability of databases focusing on other aspects of the rich animal diversity, and tools to query and combine them. Through future frequent updates of COMADRE, and its integration with other online resources, we encourage animal ecologists to tackle global ecological and evolutionary questions with unprecedented sample size.}, 
-doi = {10.1111/1365-2656.12482}, 
+@Article{Dunham2014,
+author = {Dunham, K. and Dinkelacker, S. and Miller, J. }, 
+title = {{A stage-based population model for American alligators in northern latitudes}}, 
+journal = {Jour. Wild. Mgmt.}, 
+volume = {78}, 
+issue = {3}, 
+pages = {440-447}, 
+year = {2014}, 
+abstract = {Very little is known about the population dynamics of American alligators in northern latitudes. To better define the characteristics of the northern population, we combined published life-history and vital rate data for studies conducted in North Carolina and South Carolina; for comparison, we gleaned the same information from the literature for the southern (Florida and Louisiana) population. We constructed a 5-stage Lefkovitch matrix model for each population. The models showed that the southern population was stable and slightly increasing (? = 1.02), whereas the northern population was in decline (? = 0.870). We integrated potential impacts of climate change into the northern population model to determine how the population might respond to increased temperature and decreased precipitation. An increase in temperature would benefit the northern population; however, a decrease in precipitation or the combined effects of temperature increase and precipitation decrease would negatively affect the viability of the northern population. Two priorities result from modeling these scenarios: 1) a long-term monitoring program is needed to acquire the life-history and vital rate data on the northern population, and 2) current alligator habitat must be conserved or improved to insulate the species from potential drought associated with climate change.}, 
+doi = {10.1002/jwmg.688}, 
 location = {}, 
 keywords = {}}
 
@@ -65,4 +39,58 @@ doi = {10.7717/peerj.3971},
 location = {Department of Wildlife and Fisheries Sciences, Texas A\&M University, College Station, TX, United States of America.}, 
 keywords = {}}
 
+
+@Article{Salguero-Gomez2016,
+author = {Salguero-G{\'o}mez, R. and Jones, O. R. and Archer, C. R. and Bein, C. and de Buhr, H. and Farack, C. and Gottschalk, F. and Hartmann, A. and Henning, A. and Hoppe, G. and R{\"o}mer, G. and Ruoff, T. and Sommer, V. and Wille, J. and Voigt, J. and Zeh, S. and Vieregg, D. and Buckley, Y. M. and Che-Castaldo, J. and Hodgson, D. and Scheuerlein, A. and Caswell, H. and Vaupel, J. W. }, 
+title = {{{COMADRE}: a global data base of animal demography.}}, 
+journal = {J. Anim. Ecol.}, 
+volume = {85}, 
+issue = {2}, 
+pages = {371-384}, 
+year = {2016}, 
+abstract = {The open-data scientific philosophy is being widely adopted and proving to promote considerable progress in ecology and evolution. Open-data global data bases now exist on animal migration, species distribution, conservation status, etc. However, a gap exists for data on population dynamics spanning the rich diversity of the animal kingdom world-wide. This information is fundamental to our understanding of the conditions that have shaped variation in animal life histories and their relationships with the environment, as well as the determinants of invasion and extinction. Matrix population models (MPMs) are among the most widely used demographic tools by animal ecologists. MPMs project population dynamics based on the reproduction, survival and development of individuals in a population over their life cycle. The outputs from MPMs have direct biological interpretations, facilitating comparisons among animal species as different as Caenorhabditis elegans, Loxodonta africana and Homo sapiens. Thousands of animal demographic records exist in the form of MPMs, but they are dispersed throughout the literature, rendering comparative analyses difficult. Here, we introduce the COMADRE Animal Matrix Database, an open-data online repository, which in its version 1.0.0 contains data on 345 species world-wide, from 402 studies with a total of 1625 population projection matrices. COMADRE also contains ancillary information (e.g. ecoregion, taxonomy, biogeography, etc.) that facilitates interpretation of the numerous demographic metrics that can be derived from its MPMs. We provide R code to some of these examples. SYNTHESIS: We introduce the COMADRE Animal Matrix Database, a resource for animal demography. Its open-data nature, together with its ancillary information, will facilitate comparative analysis, as will the growing availability of databases focusing on other aspects of the rich animal diversity, and tools to query and combine them. Through future frequent updates of COMADRE, and its integration with other online resources, we encourage animal ecologists to tackle global ecological and evolutionary questions with unprecedented sample size.}, 
+doi = {10.1111/1365-2656.12482}, 
+location = {}, 
+keywords = {}}
+
+
+@Article{Salguero-Gomez2015,
+author = {Salguero-G{\'o}mez, R. and Jones, O. R. and Archer, C. R. and Buckley, Y. M. and Che-Castaldo, J. and Caswell, H. and Hodgson, D. and Scheuerlein, A. and Conde, D. A. and Brinks, E. and de Buhr, H. and Farack, C. and Gottschalk, F. and Hartmann, A. and Henning, A. and Hoppe, G. and R{\"o}mer, G. and Runge, J. and Ruoff, T. and Wille, J. and Zeh, S. and Davison, R. and Vieregg, D. and Baudisch, A. and Altwegg, R. and Colchero, F. and Dong, M. and de Kroon, H. and Lebreton, J.-D. and Metcalf, C. J. E. and Neel, M. M. and Parker, I. M. and Takada, T. and Valverde, T. and V{\'e}lez-Espino, L. A. and Wardle, G. M. and Franco, M. and Vaupel, J. W. }, 
+title = {{The {COMPADRE} Plant Matrix Database: an open online repository for plant demography}}, 
+journal = {J. Ecol.}, 
+volume = {103}, 
+issue = {}, 
+pages = {202-218}, 
+year = {2015}, 
+abstract = {}, 
+doi = {10.1111/1365-2745.12334}, 
+location = {}, 
+keywords = {}}
+
+
+@Book{Morris2002a,
+author = {Morris, W. F. and Doak, D. F. }, 
+title = {Quantitative conservation biology: Theory and practice of population viability analysis}, 
+volume = {}, 
+pages = {}, 
+editor = {}, 
+edition = {}, 
+publisher = {Sinauer Associates}, 
+address = {Sunderland, MA}, 
+year = {2002}, 
+abstract = {}, 
+keywords = {}}
+
+@Book{Caswell2001,
+author = {Caswell, H. }, 
+title = {Matrix population models: Construction, analysis, and interpretation}, 
+volume = {}, 
+pages = {}, 
+editor = {}, 
+edition = {2nd}, 
+publisher = {Sinauer Associates}, 
+address = {Sunderland, MA}, 
+year = {2001}, 
+abstract = {}, 
+keywords = {}}
 
