--- a/docs/MPM_errors_manuscript/MPM_errors_manuscript.Rmd
+++ b/docs/MPM_errors_manuscript/MPM_errors_manuscript.Rmd
@@ -33,8 +33,6 @@ tables: true
 journal: "Ecological Modelling"
 ---
 
-*NOTE: The R code used to generate results, tables, and figures is shown in this draft, for transparency of review. It will be hidden in the final version.*
-
 # Introduction 
 The use of matrix population models (MPMs) for the ecological study of plants and animals has expanded rapidly in recent years [@Salguero-Gomez2015; @Salguero-Gomez2016].
 MPMs are a convenient way to synthesize demographic information about a population, and are useful in addressing ecological, evolutionary, and management questions [@Caswell2001; @Morris2002a].
@@ -217,11 +215,13 @@ Properly accounting for $x'$ is a separate challenge that we address in the next
 ## Ensuring that the mean time in each developmental stage matches the species' life history
 
 # Consequences of incorrect MPM construction
-Effects on lambda (lionfish example)
+We evaluate the impacts of these errors in MPM construction by examining several endpoints that many analyses focus on: the asymptotic population growth rate ($\lambda$), sensitivity analysis of $\lambda$ to changes in underlying vital rates, and life history statistics such as generation time. We approach this evaluation through theoretical analysis (where feasible and informative) and by examining two case studies: a lionfish (*Pterois* sp.) model with very high population growth [@Morris2011], and a pair of American alligator (*Alligator mississippiensis*) with rapdily declining and nearly constant population dynamics [@Dunham2014]. These studies made all three of the errors described above; we single them out not because they are particularly egregious (many other studies make these errors) but because they do an exceptional job of describing the species' life history, allowing us to infer the model they meant to construct.
 
-Effects on sensitivity analysis
+## Effects on asymptotic population growth rate ($\lambda$) 
 
-Effects on life history statistics
+## Effects on sensitivity analysis of $\lambda$
+
+## Effects on life history statistics
 
 # Prevalence of construction errors in published MPMs
 ## Methods
